--- a/ReportsProj/appsettings.json
+++ b/ReportsProj/appsettings.json
@@ -10,6 +10,7 @@
   "connectionStrings": {
     "PM": "Data Source=192.168.1.10;Initial Catalog=PM;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "CSR": "Data Source=192.168.1.10;Initial Catalog=PM;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Management": "Data Source=192.168.1.10;Initial Catalog=Management;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     //Del When Del Invoice>> Gl [test]
     "AjaTech_Connection": "Data Source=192.168.1.10;Initial Catalog=AjaTech;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
