--- a/ReportsProj/ReportsProj.csproj
+++ b/ReportsProj/ReportsProj.csproj
@@ -16,6 +16,8 @@
     <None Remove="Reports\CSR\Rep_CRS_Ls.repx" />
     <None Remove="Reports\CSR\Rep_CSR_Id.repx" />
     <None Remove="Reports\CSR\Rep_CSR_Q.repx" />
+    <None Remove="Reports\ManagementDef\Rep_ManagementAll.repx" />
+    <None Remove="Reports\ManagementDef\Rep_ManagementSelected.repx" />
     <None Remove="Reports\MyInvoices.repx" />
     <None Remove="Reports\PM\Rep_EmployeeActions.repx" />
     <None Remove="Reports\Rep_CSRBarCodeQR - Copy.cs________" />
@@ -35,6 +37,8 @@
     <EmbeddedResource Include="Reports\CSR\Rep_CRS_Ls.repx" />
     <EmbeddedResource Include="Reports\CSR\Rep_CSR_Id.repx" />
     <EmbeddedResource Include="Reports\CSR\Rep_CSR_Q.repx" />
+    <EmbeddedResource Include="Reports\ManagementDef\Rep_ManagementAll.repx" />
+    <EmbeddedResource Include="Reports\ManagementDef\Rep_ManagementSelected.repx" />
     <EmbeddedResource Include="Reports\MyInvoices.repx" />
     <EmbeddedResource Include="Reports\PM\Rep_EmployeeActions.repx" />
     <EmbeddedResource Include="Reports\Rep_CSRQR_A.repx" />
@@ -93,6 +97,18 @@
     </Compile>
     <Compile Update="Reports\CSR\Rep_CSR_Q.Designer.cs">
       <DependentUpon>Rep_CSR_Q.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDef\Rep_ManagementAll.cs">
+      <DependentUpon>Rep_ManagementAll.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDef\Rep_ManagementAll.Designer.cs">
+      <DependentUpon>Rep_ManagementAll.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDef\Rep_ManagementSelected.cs">
+      <DependentUpon>Rep_ManagementSelected.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDef\Rep_ManagementSelected.Designer.cs">
+      <DependentUpon>Rep_ManagementSelected.repx</DependentUpon>
     </Compile>
     <Compile Update="Reports\MyInvoices.cs">
       <DependentUpon>MyInvoices.repx</DependentUpon>
