--- a/ReportsProj/bundleconfig.json
+++ b/ReportsProj/bundleconfig.json
@@ -1,4 +1,6 @@
 ﻿[
+  // Report
+
   {
     "outputFileName": "wwwroot/css/thirdparty.bundle.css",
     "inputFiles": [
@@ -84,6 +86,42 @@
 
       "node_modules/@devexpress/analytics-core/dist/js/dx-querybuilder.min.js",
       "node_modules/devexpress-reporting/dist/js/dx-reportdesigner.min.js"
+    ],
+    "minify": {
+      "enabled": false
+    },
+    "sourceMap": false
+  },
+  // DashBoard
+  {
+    "outputFileName": "wwwroot/css/site.min.css",
+    "inputFiles": [
+      "node_modules/devextreme/dist/css/dx.common.css",
+      "node_modules/devextreme/dist/css/dx.light.css",
+      "node_modules/@devexpress/analytics-core/dist/css/dx-analytics.common.css",
+      "node_modules/@devexpress/analytics-core/dist/css/dx-analytics.light.css",
+      "node_modules/@devexpress/analytics-core/dist/css/dx-querybuilder.css",
+      "node_modules/devexpress-dashboard/dist/css/dx-dashboard.light.min.css"
+    ],
+    "minify": {
+      "enabled": false,
+      "adjustRelativePaths": false
+    }
+  },
+  {
+    "outputFileName": "wwwroot/js/site.min.js",
+    "inputFiles": [
+      "node_modules/jquery/dist/jquery.js",
+      "node_modules/jquery-ui-dist/jquery-ui.js",
+      "node_modules/knockout/build/output/knockout-latest.js",
+      "node_modules/ace-builds/src-min-noconflict/ace.js",
+      "node_modules/ace-builds/src-min-noconflict/ext-language_tools.js",
+      "node_modules/ace-builds/src-min-noconflict/theme-dreamweaver.js",
+      "node_modules/ace-builds/src-min-noconflict/theme-ambiance.js",
+      "node_modules/devextreme/dist/js/dx.all.js",
+      "node_modules/@devexpress/analytics-core/dist/js/dx-analytics-core.min.js",
+      "node_modules/@devexpress/analytics-core/dist/js/dx-querybuilder.min.js",
+      "node_modules/devexpress-dashboard/dist/js/dx-dashboard.min.js"
     ],
     "minify": {
       "enabled": false
