--- a/ReportsProj/package.json
+++ b/ReportsProj/package.json
@@ -2,11 +2,11 @@
   "version": "1.0.0",
   "name": "asp.net",
   "private": true,
-  "dependencies": {
-    "devextreme": "20.1.*",
-    "@devexpress/analytics-core": "20.1.*",
-    "devexpress-reporting": "20.1.*",
-    "globalize": "^1.3.0",
+  "license": "MIT",
+  "devDependencies": {
+    "devextreme": "20.1-next",
+    "@devexpress/analytics-core": "20.1-next",
+    "devexpress-dashboard": "20.1-next",
     "jquery-ui-dist": "^1.12.1"
   }
 }
