--- a/ReportsProj/appsettings.json
+++ b/ReportsProj/appsettings.json
@@ -12,7 +12,9 @@
     "CSR": "Data Source=192.168.1.10;Initial Catalog=PM;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "Management": "Data Source=192.168.1.10;Initial Catalog=Management;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     //Del When Del Invoice>> Gl [test]
-    "AjaTech_Connection": "Data Source=192.168.1.10;Initial Catalog=AjaTech;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "AjaTech_Connection": "Data Source=192.168.1.10;Initial Catalog=AjaTech;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+
+    "nwind": "XpoProvider=InMemoryDataStore;Read Only=true;Data Source=Data\\nwind.xml;"  //--Dashboard
 
   }
 }
