--- a/ReportsProj/package.json
+++ b/ReportsProj/package.json
@@ -6,6 +6,7 @@
     "devextreme": "20.1.*",
     "@devexpress/analytics-core": "20.1.*",
     "devexpress-reporting": "20.1.*",
+    "devexpress-dashboard": "20.1.*",
     "globalize": "^1.3.0",
     "jquery-ui-dist": "^1.12.1"
   }
