--- a/ReportsProj/ReportsProj.csproj
+++ b/ReportsProj/ReportsProj.csproj
@@ -27,6 +27,7 @@
     <None Remove="Reports\ManagementDef\Rep_ManagementSelected.repx" />
     <None Remove="Reports\ManagementDef\Rep_Management_DatailsSelected.repx" />
     <None Remove="Reports\ManagementDoc\Rep_All_EmploymentAdvertizement.repx" />
+    <None Remove="Reports\ManagementDoc\Rep_All_EmploymentContract.repx" />
     <None Remove="Reports\ManagementDoc\Rep_ApplyToJob.repx" />
     <None Remove="Reports\ManagementDoc\Rep_EmpCard_V1.repx" />
     <None Remove="Reports\ManagementDoc\Rep_EmpCard_V2.repx" />
@@ -60,6 +61,7 @@
     <EmbeddedResource Include="Reports\ManagementDef\Rep_ManagementSelected.repx" />
     <EmbeddedResource Include="Reports\ManagementDef\Rep_Management_DatailsSelected.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_All_EmploymentAdvertizement.repx" />
+    <EmbeddedResource Include="Reports\ManagementDoc\Rep_All_EmploymentContract.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_ApplyToJob.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_EmpCard_V1.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_EmpCard_V2.repx" />
@@ -153,6 +155,12 @@
     </Compile>
     <Compile Update="Reports\ManagementDoc\Rep_All_EmploymentAdvertizement.Designer.cs">
       <DependentUpon>Rep_All_EmploymentAdvertizement.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_All_EmploymentContract.cs">
+      <DependentUpon>Rep_All_EmploymentContract.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_All_EmploymentContract.Designer.cs">
+      <DependentUpon>Rep_All_EmploymentContract.repx</DependentUpon>
     </Compile>
     <Compile Update="Reports\ManagementDoc\Rep_ApplyToJob.cs">
       <DependentUpon>Rep_ApplyToJob.repx</DependentUpon>
