--- a/ReportsProj/ReportsProj.csproj
+++ b/ReportsProj/ReportsProj.csproj
@@ -29,6 +29,7 @@
     <None Remove="Reports\ManagementDoc\Rep_All_EmploymentAdvertizement.repx" />
     <None Remove="Reports\ManagementDoc\Rep_All_EmploymentContract.repx" />
     <None Remove="Reports\ManagementDoc\Rep_ApplyToJob.repx" />
+    <None Remove="Reports\ManagementDoc\Rep_AttendancePlanPerEmployee.repx" />
     <None Remove="Reports\ManagementDoc\Rep_AttendanceShiftRequest.repx" />
     <None Remove="Reports\ManagementDoc\Rep_AttendanceShiftRequest_All.repx" />
     <None Remove="Reports\ManagementDoc\Rep_EmpCard_V1.repx" />
@@ -62,6 +63,7 @@
     <EmbeddedResource Include="Reports\ManagementDef\Rep_ManagementAll.repx" />
     <EmbeddedResource Include="Reports\ManagementDef\Rep_ManagementSelected.repx" />
     <EmbeddedResource Include="Reports\ManagementDef\Rep_Management_DatailsSelected.repx" />
+    <EmbeddedResource Include="Reports\ManagementDoc\Rep_AttendancePlanPerEmployee.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_All_EmploymentAdvertizement.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_All_EmploymentContract.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_ApplyToJob.repx" />
@@ -153,6 +155,12 @@
     </Compile>
     <Compile Update="Reports\ManagementDef\Rep_Management_DatailsSelected.Designer.cs">
       <DependentUpon>Rep_Management_DatailsSelected.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_AttendancePlanPerEmployee.cs">
+      <DependentUpon>Rep_AttendancePlanPerEmployee.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_AttendancePlanPerEmployee.Designer.cs">
+      <DependentUpon>Rep_AttendancePlanPerEmployee.repx</DependentUpon>
     </Compile>
     <Compile Update="Reports\ManagementDoc\Rep_All_EmploymentAdvertizement.cs">
       <DependentUpon>Rep_All_EmploymentAdvertizement.repx</DependentUpon>
