--- a/ReportsProj/ReportsProj.csproj
+++ b/ReportsProj/ReportsProj.csproj
@@ -40,6 +40,7 @@
     <None Remove="Reports\ManagementDoc\Rep_FingerPrint.repx" />
     <None Remove="Reports\ManagementDoc\Rep_Interviews.repx" />
     <None Remove="Reports\ManagementDoc\Rep_Interview_All.repx" />
+    <None Remove="Reports\ManagementDoc\Rep_Schedule1.repx" />
     <None Remove="Reports\ManagementDoc\Rep_TrainingContract.repx" />
     <None Remove="Reports\ManagementDoc\Rep_VacationRequest.repx" />
     <None Remove="Reports\ManagementDoc\Rep_VacationRequest_LS.repx" />
@@ -80,6 +81,7 @@
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_FingerPrint.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_Interviews.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_Interview_All.repx" />
+    <EmbeddedResource Include="Reports\ManagementDoc\Rep_Schedule1.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_TrainingContract.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_VacationRequest.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_VacationRequest_LS.repx" />
@@ -245,6 +247,12 @@
     </Compile>
     <Compile Update="Reports\ManagementDoc\Rep_Interview_All.Designer.cs">
       <DependentUpon>Rep_Interview_All.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_Schedule1.cs">
+      <DependentUpon>Rep_Schedule1.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_Schedule1.Designer.cs">
+      <DependentUpon>Rep_Schedule1.repx</DependentUpon>
     </Compile>
     <Compile Update="Reports\ManagementDoc\Rep_TrainingContract.cs">
       <DependentUpon>Rep_TrainingContract.repx</DependentUpon>
