--- a/ReportsProj/ReportsProj.csproj
+++ b/ReportsProj/ReportsProj.csproj
@@ -32,6 +32,7 @@
     <None Remove="Reports\ManagementDoc\Rep_ApplyToJob.repx" />
     <None Remove="Reports\ManagementDoc\Rep_ApplyToJobOnline.repx" />
     <None Remove="Reports\ManagementDoc\Rep_ApplyToJobOnlinePage.repx" />
+    <None Remove="Reports\ManagementDoc\Rep_ApplyToJobOnlinePage_En.repx" />
     <None Remove="Reports\ManagementDoc\Rep_ApplyToJobOnline_En.repx" />
     <None Remove="Reports\ManagementDoc\Rep_ApplyToJob_All.repx" />
     <None Remove="Reports\ManagementDoc\Rep_AttendancePlanPerEmployee.repx" />
@@ -77,6 +78,7 @@
     <EmbeddedResource Include="Reports\ManagementDef\Rep_Management_DatailsSelected.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_ApplyToJobOnline.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_ApplyToJobOnlinePage.repx" />
+    <EmbeddedResource Include="Reports\ManagementDoc\Rep_ApplyToJobOnlinePage_En.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_ApplyToJobOnline_En.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_ApplyToJob_All.repx" />
     <EmbeddedResource Include="Reports\ManagementDoc\Rep_AttendancePlanPerEmployee.repx" />
@@ -197,6 +199,12 @@
     </Compile>
     <Compile Update="Reports\ManagementDoc\Rep_ApplyToJobOnlinePage.Designer.cs">
       <DependentUpon>Rep_ApplyToJobOnlinePage.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_ApplyToJobOnlinePage_En.cs">
+      <DependentUpon>Rep_ApplyToJobOnlinePage_En.repx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\ManagementDoc\Rep_ApplyToJobOnlinePage_En.Designer.cs">
+      <DependentUpon>Rep_ApplyToJobOnlinePage_En.repx</DependentUpon>
     </Compile>
     <Compile Update="Reports\ManagementDoc\Rep_ApplyToJobOnline_En.cs">
       <DependentUpon>Rep_ApplyToJobOnline_En.repx</DependentUpon>
