--- a/ReportsProj/ReportsProj.csproj
+++ b/ReportsProj/ReportsProj.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
     <Compile Remove="wwwroot\Content\**" />
+    <Content Remove="Services\**" />
     <Content Remove="wwwroot\Content\**" />
+    <EmbeddedResource Remove="Services\**" />
     <EmbeddedResource Remove="wwwroot\Content\**" />
+    <None Remove="Services\**" />
     <None Remove="wwwroot\Content\**" />
   </ItemGroup>
 
