--- a/ReportsProj/appsettings.json
+++ b/ReportsProj/appsettings.json
@@ -17,7 +17,8 @@
     "AjaTech_Connection": "Data Source=192.168.1.10;Initial Catalog=AjaTech;User ID=hotel_3;Password=hotel_3;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "Pharm_Connection": "Data Source=192.168.1.10;Initial Catalog=PHARM;User ID=Invoice;Password=Invoice;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "CLINIC_Connection": "Data Source=192.168.1.10;Initial Catalog=CLINIC;User ID=Invoice;Password=Invoice;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "Erp_Connection": "Data Source=192.168.1.10;Initial Catalog=erp;User ID=Invoice;Password=Invoice;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Erp_F_Connection": "Data Source=192.168.1.10;Initial Catalog=erp_F;User ID=Invoice;Password=Invoice;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Erp_M_Connection": "Data Source=192.168.1.10;Initial Catalog=erp_M;User ID=Invoice;Password=Invoice;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
 
     "nwind": "XpoProvider=InMemoryDataStore;Read Only=true;Data Source=Data\\nwind.xml;" //--Dashboard
 
